cmake_minimum_required(VERSION 2.8)

find_package(OpenCV REQUIRED)

get_property(SOURCE_FILES GLOBAL PROPERTY PROJECT_SOURCE_FILES)
get_property(INCLUDE_PATHS GLOBAL PROPERTY PROJECT_INCLUDE_PATHS)
get_property(LINK_PATHS GLOBAL PROPERTY PROJECT_LINK_PATHS)

set(INCLUDE_PATHS
    ${INCLUDE_PATHS}
    ${OpenCV_INCLUDE_DIRS}
)

set(LINK_PATHS
    ${LINK_PATHS}
    ${OpenCV_LIBS}
)

set_property(GLOBAL PROPERTY PROJECT_SOURCE_FILES ${SOURCE_FILES})
set_property(GLOBAL PROPERTY PROJECT_INCLUDE_PATHS ${INCLUDE_PATHS})
set_property(GLOBAL PROPERTY PROJECT_LINK_PATHS ${LINK_PATHS})
